1.18 port 98% done